--- a/Files/example_homework_0.html
+++ b/Files/example_homework_0.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Yunus Emre Kırlı - IE582 - Fall 2020" />
 
 
-<title>Interesting R Examples</title>
+<title>Interesting Phyton Tutorials</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -423,21 +423,21 @@ summary {
 
 
 
-<h1 class="title toc-ignore">Interesting R Examples</h1>
+<h1 class="title toc-ignore">Interesting Phyton Tutorials</h1>
 <h4 class="author">Yunus Emre Kırlı - IE582 - Fall 2020</h4>
 
 </div>
 
 
+<p>Python for Data Science - 5 tutorial Videos for Beginners</p>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.kaggle.com/mrisdal/exploring-survival-on-the-titanic">Exploring Survival on the Titanic</a></p>
-<p>This example is important because it is an R Notebook on Titanic data set. Titanic is considered as one of the Data Science 101 data set and this notebook provides a good exploratory data analysis. It is also a Kaggle Kernel, which is a very good source for this kind of example R codes. The notebook also covers feature engineering, missing data imputation and modeling.</p></li>
-<li><p><a href="https://www.youtube.com/watch?v=vmEHCJofslg&amp;ab_channel=KeithGalli">Pandas_Pokemon</a></p></li>
-<li><p><a href="https://www.youtube.com/watch?v=hSPmj7mK6ng&amp;ab_channel=CharmingData">Plotly</a></p></li>
-<li><p><a href="https://www.youtube.com/watch?v=GB9ByFAIAH4&amp;ab_channel=KeithGalli">Numpy</a></p></li>
-<li><p><a href="https://www.youtube.com/watch?v=M9Itm95JzL0&amp;ab_channel=KeithGalli">Sci-Kit Learn</a></p></li>
-<li><p><a href="https://www.youtube.com/watch?v=BrnDlRmW5hs&amp;ab_channel=Lo-fiMusic">Songs to Study&amp;Relax</a></p></li>
+<li><p><a href="https://www.youtube.com/watch?v=vmEHCJofslg&amp;ab_channel=KeithGalli">PandasTutorial</a></p></li>
+<li><p><a href="https://www.youtube.com/watch?v=hSPmj7mK6ng&amp;ab_channel=CharmingData">Plotly Tutorial</a></p></li>
+<li><p><a href="https://www.youtube.com/watch?v=GB9ByFAIAH4&amp;ab_channel=KeithGalli">Numpy Tutorial</a></p></li>
+<li><p><a href="https://www.youtube.com/watch?v=M9Itm95JzL0&amp;ab_channel=KeithGalli">Sci-Kit Learn Tutorial</a></p></li>
+<li><p><a href="https://www.youtube.com/watch?v=LHBE6Q9XlzI&amp;ab_channel=freeCodeCamp.org">Long Tutorial</a></p></li>
 </ol>
+<p>Here are my favourite <a href="https://www.youtube.com/watch?v=BrnDlRmW5hs&amp;ab_channel=Lo-fiMusic">songs</a> to relax while coding and studying.</p>
 
 
 
